# astron-claw

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  install.sh  media-path-fix-report.md  uninstall.sh
backend/: .dockerignore  .env.example  Dockerfile  go.mod  go.sum
docs/: 2026-03-24-astron-claw-ws-postmortem.md  2026-03-24-bridge-client-stale-socket-race-analysis.md  analysis-sse-hang-on-empty-llm-response.md  api.md  (+22 more)
server/: .env.example  Dockerfile  app.py  bridge.py  config.py  pyproject.toml  run.py  stress_test.py  token_manager.py
server/infra/: cache.py  config.py  database.py  errors.py  log.py  migration.py  models.py  s3.py  token_auth.py
server/infra/storage/: __init__.py  base.py  hmac_auth.py  ifly_gateway.py  s3.py
server/infra/telemetry/: __init__.py  config.py  metrics.py  provider.py  reader.py  redis_exporter.py
server/migrations/versions/: a3b1c2d4e5f6_add_chat_session_tables.py  b4c2d3e5f6a7_drop_chat_active_sessions_table.py  c5d3e4f5a6b7_drop_media_table.py  d6e4f5a6b7c8_timestamp_to_datetime.py
server/routers/: admin.py  admin_auth.py  health.py  media.py  metrics.py  sse.py  tokens.py  websocket.py
server/services/: admin_auth.py  bridge.py  media_manager.py  queue.py  session_store.py  state.py  token_manager.py
server/tests/: conftest.py  test_bridge.py  test_bridge_translate.py  test_config.py  test_duplicate_token.py  test_media_manager.py  test_queue.py  test_session_store.py  test_sse.py  test_token_auth.py  test_token_manager.py  test_websocket.py
server/tests/e2e/: README.md  test_integration.py
(+113 files in other folders)
