[project]
name = "astron-claw"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "websockets>=16.0",
    "python-multipart>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.48",
    "aiomysql>=0.3.2",
    "redis[hiredis]>=7.2.1",
    "python-dotenv>=1.2.2",
    "alembic>=1.18.4",
    "loguru>=0.7.3",
    "uvloop>=0.22.1",
    "httptools>=0.7.1",
    "aiobotocore>=3.2.1",
    "aiohttp>=3.13.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
